data/src/test/resources/com/linkedin/data/schema/annotation/denormalizedsource/invalid/6_record_schema_level_invalid.pdl
namespace com.linkedin.data.schema.annotation.denormalizedsource.invalid

@customAnnotation="InvalidAnnotation"
record InvalidRecordLevelAnnotation {
  a: int
}